# pycontest

./: .gitignore  Makefile  README.org  README.txt  pyproject.toml  requirements.txt  tox.ini
examples/dictsplit/: contest.py
examples/eye-matrix/: contest.py
examples/trig-builtins/: contest.py
src/pycontest/: __init__.py  pycontest.py  table.py  value.py
tests/: test_pycontest.py
