[project]
name = "pycontest"
version = "0.1.0"
authors = [
  { name="Johannes Willkomm", email="jwillkomm@ai-and-it.de" },
]
description = "Runtime benchmarking"
readme = "README.txt"
requires-python = ">=3.7"
depends = [ "-rrequirements.txt", ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aiandit/pycontest"
"Bug Tracker" = "https://github.com/pypa/pycontest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
